sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
/*	Le nain regarde le pot de fleur qui est à côté de lui 
	et il regarde également le pot de fleurs précédent; 
	si ces deux pots sont alignés dans le bon ordre, 
		le nain se déplace en avant d'un pot de fleurs, 
	sinon il les échange et se déplace en arrière d'un pot de fleur.
	Condition aux limites : 
	si il n'y a pas de pot de fleurs précédent, le nain avance ; 
	si il n'y a pas de pot suivant alors il a terminé sa tâche.
*/
	var i

	while(i==getNombreValeurs()+1)
	{
		if(i==0)
		{
			i= i+1
		}

		if(plusPetit(i,i-1)
		{
			echange(i,i-1)
		}
		
		else
		{
			i=i+1;
		}

	}
	
	
}
